--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <title>Random Quote Generator</title>
   </head>
-  <body>
+  <body id="body">
  
     <div class="container-fluid">
       <div class="row justify-content-center mt-5" id="wrapper">
